--- a/app/src/main/res/layout/activity_rsa.xml
+++ b/app/src/main/res/layout/activity_rsa.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DesActivity">
+    tools:context=".RsaActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -98,6 +98,95 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
                     android:text="@string/_byte" />
+
+            </RadioGroup>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/generate_key_length"
+                    android:textSize="20sp" />
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
+                    android:text="@string/generate_key_file" />
+
+            </LinearLayout>
+
+            <RadioGroup
+                android:id="@+id/rg_key_length_1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <RadioButton
+                    android:id="@+id/rb_key_length_512"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/_512" />
+
+                <RadioButton
+                    android:id="@+id/rb_key_length_768"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:text="@string/_768" />
+
+                <RadioButton
+                    android:id="@+id/rb_key_length_1024"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:text="@string/_1024" />
+
+                <RadioButton
+                    android:id="@+id/rb_key_length_1152"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:text="@string/_1152" />
+
+            </RadioGroup>
+
+            <RadioGroup
+                android:id="@+id/rg_key_length_2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <RadioButton
+                    android:id="@+id/rb_key_length_1280"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/_1280" />
+
+                <RadioButton
+                    android:id="@+id/rb_key_length_1976"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:text="@string/_1976" />
+
+                <RadioButton
+                    android:id="@+id/rb_key_length_2048"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:text="@string/_2048" />
 
             </RadioGroup>
 
@@ -203,6 +292,14 @@
                 android:layout_height="wrap_content"
                 android:text="@string/key_content"
                 android:textSize="20sp" />
+
+            <Button
+                android:id="@+id/bt_choose_key_file"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/tv_key_content"
+                android:layout_marginTop="10dp"
+                android:text="@string/choose_file" />
 
             <EditText
                 android:id="@+id/et_key_content"
